# SpeQtral

./: .env  .gitignore  Dockerfile  docker-compose.yaml
kms/: CMakeLists.txt  Dockerfile  Makefile  build-all.sh  run-all.sh
kms/keyRelayInterface/: CMakeLists.txt
kms/keyRelayInterface/src/: App.cpp  AppComponent.hpp  Constants.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
kms/keyRelayInterface/src/controller/: KeyRelayInterfaceController.hpp  KeySupplyInterfaceController.hpp
kms/keyRelayInterface/src/dto/: keyRelayDTOs.hpp  keySupplyDTOs.hpp
kms/keyStore/: CMakeLists.txt
kms/keyStore/src/keyStorage/: keyPool.hpp
kms/keyStoreManager/: CMakeLists.txt
kms/keyStoreManager/src/: AppComponent.hpp  Constants.hpp
kms/keyStoreManager/src/manager/: keyPoolManager.hpp
kms/keySupplyInterface/: CMakeLists.txt
kms/keySupplyInterface/src/: App.cpp  AppComponent.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
kms/keySupplyInterface/src/controller/: KeySupplyInterfaceController.hpp
kms/keySupplyInterface/src/dto/: keySupplyDTOs.hpp
kms/monolith/all-services/: App.cpp  CMakeLists.txt
kms/qkdModuleInterface/: CMakeLists.txt
kms/qkdModuleInterface/src/: Module.hpp
kms/scripts/: install-dependencies_mac.sh  install_dependencies.sh
kms/source/: App.cpp  AppComponent.hpp  Constants.hpp  main.cpp  server.cpp  server.hpp
kms/source/configService/: controllerConfig.cpp  controllerConfig.hpp
kms/source/configService/src/: controllerConfig.cpp  controllerConfig.hpp
kms/source/dto/: DTOs.hpp  KMSAgentDTOs.hpp  QNLAgentDTOs.hpp
kms/source/keyManagmentAgent/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp  key.cpp  key.hpp  keyWriter.cpp  keyWriter.hpp
kms/source/keyManagmentAgent/dto/: KMSAgentDTOs.hpp
kms/source/keyManagmentAgent/keyStorage/: keyPool.cpp  keyPool.hpp  keyPoolManager.cpp  keyPoolManager.hpp  keyPoolManagerDefaultConfig.hpp
kms/source/keyManagmentAgent/quantumNetworkLayer/: quantumNetworkLayerReader.hpp
kms/source/keyStore/key/: keyWriter.cpp
kms/source/keyStore/keyStorage/: keyPool.hpp  keyPoolManager.hpp
kms/source/keySupplyAgent/: keySupplyAgent.hpp
kms/source/kms-service/: key.cpp  keyPool.cpp  keyPool.hpp  keyPoolManager.cpp
kms/source/quantumNetworkLayerAgent/: quantumNetworkAgent.hpp
kms/source/quantumNetworkLayerAgent/quantumNetworkLayer/: qnlUtil.hpp
kms/source/quantumNetworkLayerAgent/quantumNetworkLayer/router/: simpleRouterConfig.hpp
kms/source/util/: serverDefaultConfig.hpp
kms/util/: CMakeLists.txt
kms/util/src/: ServerDefaultConfig.hpp  Util.cpp  Util.hpp
kms2/: build-all.sh
kms2/keyRelayInterface/src/: Runner.cpp
kms2/keyStore/key/: key.hpp
kms2/keyStore/keyStorage/: keyPoolManager.hpp
kms2/keyStoreManager/src/: Constants.hpp  SwaggerComponent.hpp
kms2/keySupplyInterface/: CMakeLists.txt
kms2/keySupplyInterface/src/: App.cpp  AppComponent.hpp
kms2/keySupplyInterface/src/controller/: KeySupplyInterfaceController.hpp
kms2/keySupplyInterface/src/dto/: keySupplyDTOs.hpp
kms2/monolith/all-services/: App.cpp  CMakeLists.txt  build-all.sh
kms2/monolith/all-services/util/: Util.cpp  Util.hpp
routes/: a-route.json  b-route.json  c-route.json
scripts/: 1-set-local-env.sh  2-auth-a.sh  3-get-ab-key-from-a.sh  4-auth-b.sh  5-get-ab-key-from-b.sh  6-get-ac-key-from-a.sh  7-auth-c.sh  8-get-ac-key-from-c.sh  build-and-run.sh
